# opencv-course-practice

skrebkov_lab2/: CMakeLists.txt  ght.cpp
skrebkov_labs/lab0/: CMakeLists.txt  main.cpp
skrebkov_labs/lab1/: CMakeLists.txt  main.cpp
